fix style for list to keep items visible while hover in ProductSearch

--- a/src/components/features/ProductSearch/ProductSearch.module.scss
+++ b/src/components/features/ProductSearch/ProductSearch.module.scss
@@ -33,7 +33,7 @@
         position: relative;
         font-size: 14px;
         top: 10px;
-        width: 200px;
+        width: 201px;
         z-index: 1;
 
         .childList {
@@ -44,7 +44,7 @@
           background-color: #fff;
           border: 1px solid $form-border-color;
           border-top: 0;
-          width: 241.5px;
+          width: 242.7px;
           left: -41px;
 
           &.visible {
